Implement migration for QA reports
